# TSCloud

./: .gitattributes  .gitignore  ADVANCED_FEATURES_COMPLETE.md  CHANGELOG.md  COMPLETE_SYSTEM_READY.md  CONTRIBUTING.md  DARK_MODE_IMPLEMENTATION.md  DESKTOP_APP_SUCCESS.md  ENCRYPTION_IMPLEMENTATION.md  ENHANCED_DESKTOP_APP.md  FINAL_SYSTEM_COMPLETE.md  FINAL_TEST_REPORT.md  FOLDER_SYNC_IMPLEMENTATION.md  LICENSE  MULTI_CHANNEL_IMPLEMENTATION.md  PRODUCTION_READY.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_READY.md  REPOSITORY_READY.md  TASK_COMPLETE_USER_CONFIGURABLE_BOTS.md  TEST_RESULTS.md  TSCLOUD_REBRANDING_COMPLETE.md  ULTIMATE_SECURECLOUD_ROADMAP.md  USER_CONFIGURABLE_BOTS.md  WHATS_NEXT_ROADMAP.md  build.sh  config.example.json  create_release.bat  create_release.sh  prepare_release.bat  prepare_release.sh  test_config.json  test_encryption.py  test_file.txt  test_folder_sync.py  test_full_integration.py  test_integration.py  test_real_telegram.py  test_real_upload.py  (+2 more)
android-client/: settings.gradle.kts
desktop-ui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  PasswordDialog.xaml  PasswordDialog.xaml.cs  SecureCloud.Desktop.csproj  SimpleMainWindow.xaml  SimpleMainWindow.xaml.cs  TSCloud.Desktop.csproj  TestWindow.xaml  TestWindow.xaml.cs  analytics.json  versioning.json
docs/: ARCHITECTURE.md  SECURITY.md  SETUP.md
rust-core/: Cargo.toml  build.rs
rust-core/src/: config.rs  crypto.rs  database.rs  ffi.rs  file_processor.rs  lib.rs  multi_channel.rs  storage.rs  telegram.rs
web-dashboard/: package-lock.json  (+2 more)
(+73 files in other folders)
