[package]
name = "secure-cloud-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "secure_cloud_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
blake3 = "1.5"
rand = "0.8"

# Compression
zstd = "0.13"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system
notify = "6.1"
walkdir = "2.4"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
chrono = "0.4"

# C FFI
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
tempfile = "3.0"